--- a/src/DevelopKit.Wpf/Controls/CaptionBar/CaptionBar.xaml
+++ b/src/DevelopKit.Wpf/Controls/CaptionBar/CaptionBar.xaml
@@ -1,7 +1,7 @@
 ﻿<ResourceDictionary
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:sharemee="clr-namespace:Sharemee.DevelopKit.Wpf.Controls">
+    xmlns:ctl="clr-namespace:Sharemee.DevelopKit.Wpf.Controls">
 
     <!--  SystemButtonStyle  -->
     <Style x:Key="SystemButtonStyle" TargetType="{x:Type Button}">
@@ -71,10 +71,10 @@
         </Style.Triggers>
     </Style>
 
-    <Style x:Key="CaptionBarStyle" TargetType="{x:Type sharemee:CaptionBar}">
+    <Style x:Key="CaptionBarStyle" TargetType="{x:Type ctl:CaptionBar}">
         <Setter Property="Template">
             <Setter.Value>
-                <ControlTemplate TargetType="{x:Type sharemee:CaptionBar}">
+                <ControlTemplate TargetType="{x:Type ctl:CaptionBar}">
                     <Border
                         Background="Transparent"
                         BorderBrush="{TemplateBinding BorderBrush}"
@@ -84,7 +84,7 @@
                             <!--  标题栏区域  -->
                             <Grid
                                 Height="{TemplateBinding CaptionHeight}"
-                                sharemee:CaptionBar.IsCaptionBarContainer="True"
+                                ctl:CaptionBar.IsCaptionBarContainer="True"
                                 Background="{TemplateBinding Background}">
                                 <Grid.ColumnDefinitions>
                                     <ColumnDefinition />
@@ -133,22 +133,22 @@
                                     <!--  最小化按钮  -->
                                     <Button
                                         x:Name="MinimizedButton"
-                                        sharemee:CaptionBar.ActionState="Minimized"
+                                        ctl:CaptionBar.ActionState="Minimized"
                                         Content="&#xE921;" />
                                     <!--  最大化按钮  -->
                                     <Button
                                         x:Name="MaximizedButton"
-                                        sharemee:CaptionBar.ActionState="Maximized"
+                                        ctl:CaptionBar.ActionState="Maximized"
                                         Content="&#xE922;" />
                                     <!--  还原按钮  -->
                                     <Button
                                         x:Name="RestoreButton"
-                                        sharemee:CaptionBar.ActionState="Normal"
+                                        ctl:CaptionBar.ActionState="Normal"
                                         Content="&#xE923;" />
                                     <!--  关闭按钮  -->
                                     <Button
                                         x:Name="CloseButton"
-                                        sharemee:CaptionBar.IsCloseAction="True"
+                                        ctl:CaptionBar.IsCloseAction="True"
                                         Content="&#xE106;"
                                         Style="{DynamicResource CloseButtonStyle}" />
                                 </StackPanel>
@@ -176,6 +176,6 @@
             </Setter.Value>
         </Setter>
     </Style>
-    <Style BasedOn="{StaticResource CaptionBarStyle}" TargetType="{x:Type sharemee:CaptionBar}" />
+    <Style BasedOn="{StaticResource CaptionBarStyle}" TargetType="{x:Type ctl:CaptionBar}" />
 
 </ResourceDictionary>
